--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Analog Clock</title>
+    <title>Analog Clock using html css and js</title>
   </head>
 
   <body>
     <div class="container">
       <div class="clock">
-        <div style="--clr: #ff3d58; --h: 74px" id="hour" class="hand">
+        <div style="--clr: #c3ff00; --h: 74px" id="hour" class="hand">
           <i></i>
         </div>
-        <div style="--clr: #00a6ff; --h: 84px" id="min" class="hand">
+        <div style="--clr: #ba00ee; --h: 84px" id="min" class="hand">
           <i></i>
         </div>
         <div style="--clr: #ffffff; --h: 94px" id="sec" class="hand">
